Adding some media content and style.

--- a/index.html
+++ b/index.html
@@ -13,28 +13,54 @@
 </head>
 
 <body>  
-  <div id="banner">
-    <h1 id="logo">CONNECTOR</h1>
+  <div id="ribbon">
+    <div id="logo">
+      <h1>CONNECTOR</h1>
+    </div>
     <div id="navigation">
       <ul>
+        <li data-content="about" class="menu">About</li>
         <li data-content="live" class="menu">Live</li>
-        <li data-content="collector" class="menu">Collector</li>
         <li data-content="media" class="menu">Media</li>
+        <li data-content="collector" class="menu">Collector</li>
       </ul>
     </div>
-  </div>
-  
-  <div id="live" class="content">
-    <h2>02 Twenty Four, MMXII</h2>
-    <p>Playing with Sound Molestor at the Lorem Dolar Gallery. Come check it out - There'll be sandwiches and sacks of money.</p>
-  </div>
-  
-  <div id="collector" class="content">
     
-  </div>
-  
-  <div id="media" class="content">
+    <div id="about" class="content">
+      <h2>Connector is</h2>
+      <ul>
+        <li>Neil Dean and David Guerette</li>
+        <li>Since 2009</li>
+        <li>Musical</li>
+        <li>Visual</li>
+        <li>Kinetic</li>
+      </ul>
+
+      <h2>Connector Collective is</h2>
+      <ul>
+        <li>Kyle Oppenheimer</li>
+        <li>Ben Lacker</li>
+        <li>Adam Goldstein</li>
+      </ul>
+    </div>
     
+    <div id="live" class="content">
+      <h2>02 Twenty Four, MMXII</h2>
+      <p>Playing with Sound Molestor at the Lorem Dolar Gallery. Come check it out - There'll be sandwiches and sacks of money. Definitely not made up.</p>
+    </div>
+
+    <div id="media" class="content">
+      <img id="speaker_mic" src="images/speaker_mic.jpg" />
+      <iframe class="audio" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=2466812150/size=venti/bgcol=FFFFFF/linkcol=4285BB/transparent=true/">
+        <a href="http://connector.bandcamp.com/track/treehouse">Treehouse by Connector</a>
+      </iframe>
+      <iframe class="video" src="http://www.youtube-nocookie.com/embed/oehhHfRrBLM" allowfullscreen></iframe>
+    </div>
+
+    <div id="collector" class="content">
+      <h2>Collector?</h2>
+      <p>I hardly know her.</p>
+    </div>
   </div>
 </body>
 
