Adding insignia video

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </div>
 
     <div id="media" class="content">
+      <iframe class="video" src="http://www.youtube.com/embed/uyGdM3FasNQ" allowfullscreen></iframe>
       <iframe class="audio" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=2466812150/size=venti/bgcol=FFFFFF/linkcol=4285BB/transparent=true/">
         <a href="http://connector.bandcamp.com/track/treehouse">Treehouse by Connector</a>
       </iframe>
@@ -60,7 +61,9 @@
     </div>
 
     <div id="collector" class="content">
-      <h2>Coming soon</h2>
+      <ul>
+        <li><a href="http://www.myspace.com/kyleopp">Kyle Oppenheimer</a></li>
+      </ul>
     </div>
   </div>
 </body>
